# toy3body

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: basin_equalmass_v03.json  basin_equalmass_v05.json  basin_small.json  basin_vinf1_medium.json  boundary_focus_escape_exchange_eq_v05.json  boundary_focus_vinf1.json  ensemble_large.json  ensemble_medium.json  ensemble_small.json  ensemble_wide.json  scan_regimes_small.json  uncertainty_example.json
scripts/: analyze_ensemble.py  boundary_focus_study.py  compute_basin_entropy.py  plot_basin_figures.py  plot_ensemble_figures.py  plot_run_figures.py  run_basin_map.py  run_ensemble.py  run_uncertainty.py  scan_regimes.py
src/toy3body_topo/: basin.py  chaos_metrics.py  config.py  dataset.py  embedding.py  features.py  ic.py  integrate.py  linking.py  loops.py  outcomes.py  plotting.py  pn_stub.py  rhs.py  shape.py
tests/: test_linking.py
